fix overflow table responsive

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -234,6 +234,10 @@ a {
   }
 }
 
+.table-responsive {
+  overflow-x: unset;
+}
+
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
